# BeHype

./: .gitignore  CLAUDE.md  README.md  Rakefile  test_allmids_sync.swift  test_real_sell_order.swift
.claude/: settings.local.json
BeHype/: BeHypeApp.swift  ContentView.swift  HyperliquidService.swift
BeHype.xcodeproj/: project.pbxproj
BeHype.xcodeproj/project.xcworkspace/xcuserdata/makevoid.xcuserdatad/: UserInterfaceState.xcuserstate
BeHype/DesignSystem/: Buttons.swift  Cards.swift  Colors.swift  TextFields.swift  Typography.swift
BeHype/HyperliquidSDK/: HyperliquidSwiftSDK.swift  hyperliquid_sdk_swift.swift
BeHype/Models/: CandlestickData.swift  OpenOrder.swift  UserFill+Extensions.swift  UserFill.swift
BeHype/Screens/: ChartView.swift  FundWalletView.swift  HomeView.swift  OrdersView.swift  TradeView.swift  TransactionsView.swift
BeHype/Services/: MarketDataService.swift  MockManager.swift  QRCodeGenerator.swift  TradingService.swift  TransactionService.swift  WalletService.swift
BeHypeTests/: BeHypeTests.swift
BeHypeUITests/: BeHypeUITests.swift  BeHypeUITestsLaunchTests.swift
source_project/rust/: .gitignore  Cargo.toml
source_project/rust/.claude/: settings.local.json
source_project/rust/src/: get_btc_price.rs  lib.rs  test_allmids.rs  test_assets.rs  test_balance.rs  test_candles.rs  test_fills.rs  test_fills_simple.rs  test_price_rounding.rs  test_real_market_sell.rs  test_sell_limit.rs
tasks/: build.rb  test.rb
test_scripts/: debug_sell_limit_order.swift  test_allmids.swift  test_final_sell_order.swift  test_swap_functionality.swift
(+1 files in other folders)
