[package]
name = "hyperliquid-sdk-swift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "lib"]
name = "hyperliquid_sdk_swift"

[dependencies]
uniffi = "0.29"
hyperliquid_rust_sdk = "0.6.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ethers = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "test_candles"
path = "src/test_candles.rs"

[[bin]]
name = "test_assets"
path = "src/test_assets.rs"

[[bin]]
name = "test_fills"
path = "src/test_fills.rs"

[[bin]]
name = "test_fills_simple"
path = "src/test_fills_simple.rs"

[[bin]]
name = "test_balance"
path = "src/test_balance.rs"

[[bin]]
name = "get_btc_price"
path = "src/get_btc_price.rs"

[[bin]]
name = "test_allmids"
path = "src/test_allmids.rs"
